<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_menu_add" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_menu_list" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_menu_settings" />
    </group>

    <item android:title="@string/drawer_menu_group_more">
        <menu>
            <item
                android:id="@+id/nav_advertising"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_menu_advert" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_menu_info" />
        </menu>
    </item>

</menu>
